# vocal-remover

./: pyproject.toml
src/vocal_remover/: convert.py  eval.py  inference.py  train.py
src/vocal_remover/lib/: dataset.py
