[project]
name = "vocal-remover"
version = "6.0.0b4"
description = "Vocal Remover using Deep Neural Networks"
readme = "README.md"
license = "MIT"
authors = [{ name = "tsurumeso", email = "tsurumeso@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1,<3",
    "librosa~=0.10.0",
    "matplotlib~=3.8.0",
    "opencv_python~=4.8.0",
    "resampy~=0.4.0",
    "tqdm~=4.66.0",
    "numpy~=1.26.4",
]

[project.urls]
homepage = "https://github.com/tsurumeso/vocal-remover"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vocal_remover"]
